# YP_graduate_work

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose-auth.yml  docker-compose-movies-test.yml  docker-compose-movies.yml  docker-compose-recomendations.yml  docker-compose-recommendations-tests.yml  docker-compose-recommendations.yml  docker-compose-ugc.yml
.github/workflows/: checks.yml
auth_service/fastapi_auth/: Dockerfile  alembic.ini  init.sh  main.py  pyproject.toml
auth_service/fastapi_auth/api/v1/: auth.py  role.py  users.py
auth_service/fastapi_auth/core/: config.py  exceptions.py  logger.py  rate_limit.py  tracer.py
auth_service/fastapi_auth/db/: postgres.py  redis.py
auth_service/fastapi_auth/migrations/: env.py
auth_service/fastapi_auth/migrations/versions/: 02717d409af3__initial.py
auth_service/fastapi_auth/models/: common.py  parents.py  token.py
auth_service/fastapi_auth/schemas/: mixins.py  role_schema.py  social_account.py  token_schema.py  user_role_schema.py  user_schema.py
auth_service/fastapi_auth/services/: access_service.py  cache.py  db_service.py  role_service.py  token_service.py  user_service.py  utils.py
auth_service/nginx/: nginx.conf
auth_service/nginx/conf.d/: default.conf
auth_service/tests_auth/: .dockerignore  Dockerfile  conftest.py  pyproject.toml  pytest.ini
auth_service/tests_auth/functional/: services.py  settings.py
auth_service/tests_auth/functional/auth_service/: test_auth_login.py  test_rate_limit.py  test_roles_crud.py  test_tokens.py  test_user_role_add.py  test_user_role_remove.py  test_users.py  test_users_signup.py
auth_service/tests_auth/functional/fixtures/: base_fixt.py  postgres_fixt.py  redis_fixt.py  roles_fixt.py  tokens_fixt.py  user_role_fixt.py  users_fixt.py
auth_service/tests_auth/functional/test_data/: login_data.py  roles_data.py  users_data.py
movies/etl/: .dockerignore  Dockerfile  docker-entrypoint.sh  load_data.py  models.py  pyproject.toml  settings.py
movies/etl/services/: __init__.py  backoff.py  logging.py  storage.py
movies/fastapi_movies/: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml
movies/fastapi_movies/api/v1/: films.py  genres.py  persons.py
movies/fastapi_movies/core/: config.py  enum.py  es_queries.py  exceptions.py  logger.py  models.py  service.py
movies/fastapi_movies/db/: elastic.py  redis.py
movies/fastapi_movies/models/: film.py  genre.py  person.py
movies/fastapi_movies/services/: cache.py  film.py  genre.py  person.py  storage.py  token.py
movies/nginx/conf.d/: default.conf
movies/postgres_movies/: create_schema.ddl
movies/sqlite_to_postgres/: constants.py  env.example  load_data.py  models.py  pyproject.toml
movies/sqlite_to_postgres/tests/: check_consistency.py
movies/tests_movies/: conftest.py  pyproject.toml
movies/tests_movies/functional/: settings.py
movies/tests_movies/functional/fastapi/: test_film.py  test_film_search.py  test_genre_UUID.py  test_genre_list.py  test_person_UUID_film.py  test_person_details.py  test_person_search.py
movies/tests_movies/functional/fixtures/: base_fixt.py  elastic_fixt.py  redis_fixt.py
movies/tests_movies/functional/testdata/: film_data.py  genre_data.py  person_answer_data.py  person_data.py  token_data.py
old_sprints/Async_API_sprint_1/: .gitignore  README.md  docker-compose.dev.yaml  docker-compose.yaml
old_sprints/Async_API_sprint_1/fastapi/: Dockerfile  docker-entrypoint.sh  pyproject.toml
old_sprints/Async_API_sprint_1/fastapi/src/: main.py
old_sprints/Async_API_sprint_1/nginx/: nginx.conf
old_sprints/Async_API_sprint_1/nginx/configs/: api.conf
old_sprints/Async_API_sprint_1/postgres_to_elastic_etl/: docker-entrypoint.sh
old_sprints/Async_API_sprint_2/: .env.example  docker-compose.yaml
old_sprints/Async_API_sprint_2/fastapi/: Dockerfile  pyproject.toml
old_sprints/Async_API_sprint_2/fastapi/src/: main.py
old_sprints/Auth_sprint_1/: .env.example  docker-compose.tests.yaml  docker-compose.yaml  pyproject.toml
old_sprints/Auth_sprint_1/nginx/: Dockerfile
old_sprints/Auth_sprint_1/src/: main.py
old_sprints/Auth_sprint_1/src/core/: config.py  messages.py
old_sprints/Auth_sprint_1/src/middleware/: access_jwt.py  refresh_jwt.py
old_sprints/Auth_sprint_1/src/models/: role_permission.py  (+1 more)
old_sprints/Auth_sprint_2/: .gitignore  .vale.ini  README.md  docker-compose.tests.yaml  docker-compose.yaml
old_sprints/Auth_sprint_2/admin_panel_service/: .env.example  docker-entrypoint.sh
old_sprints/Auth_sprint_2/auth_service/: .env.example  Dockerfile  docker-entrypoint.sh  pyproject.toml
old_sprints/Auth_sprint_2/nginx/: nginx.conf
old_sprints/Auth_sprint_2/postgres_to_elastic_etl/: .env.example
old_sprints/ugc_sprint_1/etl/: ETL.py
recomendations/cron/: Dockerfile  cron.py  pyproject.toml  start.sh
recomendations/cron/core/: config.py  logger.py
recomendations/nginx/: nginx.conf
recomendations/nginx/conf.d/: default.conf
recomendations/sqlite2mongo/: README.md  pyproject.toml
recomendations/sqlite2mongo/src/: main.py
recomendations/src/: Dockerfile  main.py  pyproject.toml
recomendations/src/api/: likes.py  movies.py  recommendations.py  reviews.py
recomendations/src/core/: config.py  cron.py  exceptions.py  helpers.py  logger.py  models.py
recomendations/src/models/: favourites.py  user.py
recomendations/src/services/: like.py  mongo_storage.py  recommendations.py  reviews.py
recomendations/src/tests/: conftest.py
recomendations/src/tests/functional/: settings.py
recomendations/src/tests/functional/fixtures/: common.py
recomendations/src/tests/functional/src/: test_create_matrices.py  test_get_recommendations.py
ugc_service/nginx/conf.d/: default.conf
ugc_service/src/: Dockerfile  main.py  pyproject.toml
ugc_service/src/api/: favourites.py  movies.py
ugc_service/src/core/: config.py  exceptions.py  models.py
ugc_service/src/db/: mongo.py
ugc_service/src/models/: films.py
ugc_service/src/services/: favourites.py  films.py  like.py  mongo_storage.py  reviews.py  token.py
(+76 files in other folders)
