[tool.poetry]
name = "auth_sprint_1_tests"
version = "0.1.0"
description = ""
authors = ["Борис Гельруд <agu-66@mail.ru>", "Холкин Сергей <>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "3.9.1"
pydantic = "2.5.3"
pydantic-settings = "2.1.0"
pytest = "7.4.3"
pytest-asyncio = "0.20.1"
redis = "5.0.1"
gunicorn = "^21.2.0"
uvicorn = "^0.24.0.post1"
orjson = "^3.9.10"
asyncpg = "^0.29.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
bcrypt = "^4.1.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
