[tool.poetry]
name = "Recomendations"
version = "0.1.0"
description = "FastApi UGC main"
authors = ["Your Name <you@example.com>"]
license = "n"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.2"
motor = "^3.4.0"
gunicorn = "^22.0.0"
uvicorn = "^0.29.0"
pydantic-settings = "^2.2.1"
python-jose = "^3.3.0"
pydantic = {extras = ["email"], version = "^2.7.1"}
pandas = "^2.2.2"
scikit-learn = "^1.4.2"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"
pytest-cov = "^5.0.0"
pytest-sugar = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
