[tool.poetry]
name = "ugc-main"
version = "0.1.0"
description = "FastApi UGC main"
authors = ["Your Name <you@example.com>"]
license = "n"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
fastapi-pagination = "^0.12.19"
motor = "^3.3.2"
gunicorn = "^21.2.0"
uvicorn = "^0.28.0"
pydantic-settings = "^2.2.1"
python-jose = "^3.3.0"
pydantic = {extras = ["email"], version = "^2.6.3"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
